stats bg, social medias and layout issues

--- a/src/styles/overrides/tippy.scss
+++ b/src/styles/overrides/tippy.scss
@@ -1,3 +1,6 @@
 .tippy-content {
   padding: 0;
+  background-color: #212335;
+  color: white;
+  border: 1px solid hsla(0,0%,100%,.04)
 }
